# inotify_service

./: CMakeLists.txt  README  README.cmake  example.service  inotify-service  install_service.sh
